--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+button{
+	background-color:black;
+	color:white;
+	border-radius:5px;
+	border:none;
+}
+button:hover{
+	border:none;
+	background-color:yellow;
+	color:black;
+	border-radius:30px;
+	
+}
