--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 
 /* Your CSS Code here. */
-button{
+#btn{
 	background-color:black;
 	color:white;
 	border-radius:5px;
 	border:none;
 }
-button:hover{
+#btn:hover{
 	border:none;
 	background-color:yellow;
 	color:black;
